project prepared for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sportsbet-design",
+  "homepage": "https://sportsbet-design.koko.projects.bgschool.bg/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
